2003-09-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/po/Makefile.am: convert .po files to unicode before
	running through msgfmt
	* src/revision.glade: make the open dialog box a bit bigger

2003-09-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Really fix start-up view when family 
	view style is the default. Clean up the use of views. 

2003-09-02  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/GraphViz.py: Fixed typo.
	* src/gramps_main.py: Fixed start-up view when family view style
	is the default.

2003-09-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: Fix styles
	* src/docgen/PSDrawDoc.py: Change from Text/DrawDoc to BaseDoc
	* src/docgen/SvgDrawDoc.py: Change from Text/DrawDoc to BaseDoc

2003-09-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/PdfDoc.py (make_color): Remove the first occurence -- 
	was defined twice; (left_print): Remove print statement. 
	* src/plugins/BookReport.py (BookList.save): Enable saving options 
	which are lists; 
	(BookParser.startElement, BookParser.endElement): Enable parsing 
	options which are lists.
	* src/PaperMenu.py: Change from TextDoc to BaseDoc.
	* src/Report.py: Likewise.
	* src/SpreadSheetDoc.py: Likewise. 
	* src/StyleEditor.py: Likewise.
	* src/docgen/OpenSpreadSheet.py: Likewise.
	* src/docgen/AbiWord2Doc.py: Likewise.
	* src/plugins/AncestorReport.py: Likewise.
	* src/plugins/DescendReport.py: Likewise.
	* src/plugins/DetAncestralReport.py: Likewise.
	* src/plugins/DetDescendantReport.py: Likewise.
	* src/plugins/EventCmp.py: Likewise.
	* src/plugins/FamilyGroup.py: Likewise.
	* src/plugins/FtmStyleAncestors.py: Likewise.
	* src/plugins/GraphViz.py: Likewise.
	* src/plugins/IndivComplete.py: Likewise.
	* src/plugins/IndivSummary.py: Likewise.
	* src/plugins/WebPage.py: Likewise.
	* src/plugins/Ancestors.py: Likewise.
	* src/plugins/CustomBookText.py: Likewise.
	* src/BaseDoc.py: Likewise.
